Setup of Main Activity. Started working on AsyncTask Class and button functionality for Main activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Trivia</string>
+    <string name="welcometitleline1">Welcome to\nTrivia App</string>
+    <string name="welcometitleline2">Trivia App</string>
+    <string name="loading">Loading Trivia</string>
+    <string name="exit">Exit</string>
+    <string name="startTrivia">Start Trivia</string>
 </resources>
